--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,6 +22,16 @@
             <artifactId>jopt-simple</artifactId>
             <version>4.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>0.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -46,7 +56,7 @@
                     <transformers>
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>at.yawk.password.server.Main</mainClass>
+                            <mainClass>at.yawk.password.server.DatabaseServer</mainClass>
                         </transformer>
                     </transformers>
                     <filters>
